Add boilerplate and begin page build

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Excursion</h1>
-    <h2>Excursion</h2>
-    <h3>Excursion</h3>
+
+    <!--Heading-->
+
+    <h1>Discover hidden places in the world around you</h1>
+
+    <!--App download link-->
+    <h3 id="downloadlink"><a href="https://colt8i2f5ig1hrbqc7cv52jsfgiqkglvd0e4973nnen4i3m3daj0.cc-propeller.cloud/">Download Excursion (coming soon!)</a></h3>
+
+
+
   </body>
 </html>
