Add all text, divs and related css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,44 @@
   <body>
 
     <!--Heading-->
-
-    <h1>Discover hidden places in the world around you</h1>
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+    </div>
 
     <!--App download link-->
-    <h3 id="downloadlink"><a href="https://colt8i2f5ig1hrbqc7cv52jsfgiqkglvd0e4973nnen4i3m3daj0.cc-propeller.cloud/">Download Excursion (coming soon!)</a></h3>
+      <p><a href="https://colt8i2f5ig1hrbqc7cv52jsfgiqkglvd0e4973nnen4i3m3daj0.cc-propeller.cloud/#">Download Excursion (coming soon!)</a></p>
 
 
+    <!--Video Frame-->
+    <div>
 
+    </div>
+
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+
+    <!--Image-->
+    <div>
+
+    </div>
+
+
+    <!--Device Icon-->
+    <div>
+
+
+      <h2>Coming soon for iPhone and Android</h2>
+    </div>
+    <div>
+
+
+    <!--App download link-->
+      <p><a href="https://colt8i2f5ig1hrbqc7cv52jsfgiqkglvd0e4973nnen4i3m3daj0.cc-propeller.cloud/#">Download Excursion (coming soon!)</a></p>
+    </div>
+
+    <!--Footer-->
+    <div>
+      <h3 id="copyright">&copy; Excursion</h3>
+    </div>
   </body>
 </html>
