--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <!--Video Frame-->
     <div>
-
-
+      <video autoplay>
+      <source src="./resources/video/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
     </div>
 
       <h2>Your personal travel guide</h2>
