Add remaining images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--Video Frame-->
     <div>
-      <video autoplay>
+      <video autoplay loop>
       <source src="./resources/video/excursion.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
@@ -28,14 +28,15 @@
 
     <!--Image-->
     <div>
-
+      <img id="camppic"src="./resources/images/camp.jpg" />
     </div>
 
 
     <!--Device Icon-->
     <div>
-
-
+      <p>
+        <img src="./resources/images/phone.png" />
+      </p>
       <h2>Coming soon for iPhone and Android</h2>
     </div>
     <div>
